examples/test/testpolicy11617.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11617
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key46: value32
      key25: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value1
      podSelector:
        matchLabels:
          key7: value21
          key1: value12
          key48: value19
